Completed filter transfer Improved formant tooltips

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.3 M
 
+2017-9-7 Will
+* Completed filter transfer.
+* Improved formant tooltips.
+
 2017-9-5 Will
 * Corrected last three dates here :(
 * Created noboost branch.
