--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.5.3 M
 * Master bandwidth added to MIDI controls.
 * Master bandwidth now MIDI-learnable.
 * Docs updated.
+* Corrected MIDI controls tooltips.
 
 2017-9-11 Will
 * Improved AddSynth Voice controls code.
