--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.3 M
 2017-9-17 Will
 * Mute now uses the same structure as partonoff.
   Only a few mutex locks left!
+* Paste no longer locks, but audio loop lock needed.
 
 2017-9-16 Will
 * Removed redundant mutex from OscilGenUI.
