--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.3 M
 
+2017-9-22 Will
+* Updated cmake policies.
+
 2017-9-21 Will
 * BugFix: MusicIO was passing LV2 MIDI to ring buffer.
 * Improved example build instructions.
