--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.4
 
+2017-10-13 Will
+* BugFix: Instrument loading now synchronised.
+* CLI enable/disable now updates panel.
+* set as V 1.5.4.1 rc1
+
 2017-9-27 Will
 * Merged in noboost branch. So no dependency on boost.
   Resolves a long standing very rare segfault.
