--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 1.5.4
+yoshimi 1.5.4.1 rc2
+
+2017-10-14 Will
+* Bugfix: Main part controls were responding to all
+  remote input channels but upper panel rows weren't.
+* set as V 1.5.4.1 rc2
 
 2017-10-13 Will
 * BugFix: Instrument loading now synchronised.
