--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.4 M
 
+2017-10-24 Will
+* Revised parameters for direct midi controls.
+* Virtual keyboad now uses these, so threadsafe.
+* Updated control numbers.
+
 2017-10-23 Will
 * GUI improvements to mixer panel.
 * Direct access to NoteOn, NoteOff, SetController.
