Unified root/bank/program change complete for CLI direct access

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.4 M
 
+2017-10-2 Will
+* Unified root/bank/program change complete
+  for CLI direct access.
+
 2017-10-28 Will
 * MIDI note on/off routing much simplified.
 * Further work splitting up MIDI routing.
