--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.4 M
 
+2017-10-31 Will
+* Further inprovments to unified root/bank/program.
+* Added 'Root_Bank_Program.txt' to dev_notes.
+
 2017-10-30 Will
 * MIDI controllers done for CLI  direct access
   but disabled until rest of system done.
