--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.4 M
 2017-10-31 Will
 * Further inprovments to unified root/bank/program.
 * Added 'Root_Bank_Program.txt' to dev_notes.
+* Corrected anomally with GUI bank list entries.
 
 2017-10-30 Will
 * MIDI controllers done for CLI  direct access
