--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.4 M
 2017-11-5 Will
 * Significant re-factor of vector control.
   Stable, but some details to be improved.
+* Further refinements to vector control,
+  and improved error handling.
 
 2017-11-4 Will
 * Vector CLI controls fully thread-safe.
