Running vectors now correctly update GUI

--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.5.4 M
 * Further refinements to vector control,
   and improved error handling.
 * BugFix: MIDI zero velocity not sent to noteoff :(
+* Running vectors now correctly update GUI.
 
 2017-11-4 Will
 * Vector CLI controls fully thread-safe.
