--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.4 M
 
+2017-11-7 Will
+* All remaining CLI writes thread safe :)
+  but some effect controls don't update GUI
+  and code tidying needed.
+* Doc updates.
+
 2017-11-6 Will
 * Vector GUI writes now thread safe :)
 
