BugFix: GUI Insert effects failed to update NRPN effect changes now threadsafe

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.4 M
 
+2017-11-11 Will
+* BugFix: GUI Insert effects failed to update.
+* NRPN effect changes now threadsafe.
+  Some GUI anomalies to sort out.
+
 2017-11-10 Will
 * Code cleanups around incomming MIDI.
 
