--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.4 M
 
+2017-11-12 Will
+* Corrected Vector GUI anomalies.
+* Improved CLI part channel change.
+* Started work on NRPN direct part access.
+
 2017-11-11 Will
 * BugFix: GUI Insert effects failed to update.
 * NRPN effect changes now threadsafe.
