--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.4 M
 
+2017-11-17 Will
+* Added error reports to several I/O ring buffers.
+* Revised channel switcher.
+  Still some GUI anomalies to sort out :(
+
 2017-11-16 Will
 * BugFix: New Vectors weren't being saved.
 
