Note on/off swap now in MusicIO Resolved channel switch Gui issues

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.4 M
 
+2017-11-18 Will
+* Note on/off swap now in MusicIO.
+* Resolved channel switch Gui issues.
+
 2017-11-17 Will
 * Added error reports to several I/O ring buffers.
 * Revised channel switcher.
