--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.4 M
 
+2017-11-22 Will
+* Further refinements to history lists.
+  Instruments now included.
+
 2017-11-20 Will
 * Improved GUI & CLI instrument saving.
 * Updated docs.
