--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.4 M
 
+2017-11-24 Will
+* Channel switcher was activated by Ardour!
+  Temporary fix in place.
+
 2017-11-23 Will
 * Improved internal message system.
   Now possible to send plain non-blocking
