--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.4 M
 
+2017-11-25 Will
+* Improved protection for channel switch.
+* Implimented CC 68 - Legato pedal.
+
 2017-11-24 Will
 * Channel switcher was activated by Ardour!
   Temporary fix in place.
