--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.4 M
 2017-11-25 Will
 * Improved protection for channel switch.
 * Implimented CC 68 - Legato pedal.
+* BugFix: CC 68 brace in wrong place :(
 
 2017-11-24 Will
 * Channel switcher was activated by Ardour!
