--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.4 M
 
+2017-11-26 will
+* Refined legato/keymode code.
+
 2017-11-25 Will
 * Improved protection for channel switch.
 * Implimented CC 68 - Legato pedal.
