--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.5.4 M
 * Refined legato/keymode code.
 * Part code cleanups.
 * Minor optimisation for mon/legato renote.
+* Removed redundant code from part NoteOn
+  and VirKeyboardUI.
 
 2017-11-25 Will
 * Improved protection for channel switch.
