--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.4 M
 
+2017-11-29 Will
+* BugFix: Channel switch not loading correctly.
+* Added specific older X86 CMake build options.
+
 2017-11-28 Will
 * GUI legato mode turns red if drum mode.
 * Master reset reloads the saved default state
