Improved legato fade behaviour

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.4 M
 
+2017-12-2 Will
+* Improved legato fade behaviour.
+
 2017-11-30 Will
 * BugFix: long standing silent legato note :)
   This is an interim solution needs improving.
