--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 1.5.5 rc1
+yoshimi 1.5.5 rc2
+
+2017-12-5 Will
+* Reverted change in Cmake linker for tests.
+  This may affect BSD so this availability will not
+  be mentioned in notes for next release.
+* Set version as 1.5.5 rc2.
 
 2017-12-4 Will
 * Bugfix: CLI program change not updating GUI.
