--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.5 rc3
 
+2017-12-7 Will
+* Made GUI Settings windows consistent.
+
 2017-12-6 Will
 * Implemented extended (.xiy) Instrument saves.
 
