.xiy doctype changed to Yoshimi

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.5 rc3
 
 2017-12-7 Will
 * Made GUI Settings windows consistent.
+* .xiy doctype changed to Yoshimi.
 
 2017-12-6 Will
 * Implemented extended (.xiy) Instrument saves.
