--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.5.5 M
 * BugFix: argp return still wrong for HURD :(
   Tried casting the return int to error_t instead.
 * Applied better resolution of splash timeout.
+* Bugfix: Importing scales was not updating GUI.
 
 2017-12-12 Will
 * Bugfix: argp return type was error_t should be int
