--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,10 @@
-yoshimi 1.5.5 M
+yoshimi 1.5.6 rc1
 
 2017-12-15 Will
 * Tidied up microtonal reporting.
 * Improved MIDI part/channel decoding.
+* Implemented breath control enable switch.
+* Set version as 1.5.6 rc1.
 
 2017-12-14 Will
 * Merged in BSD bugfixes from Tobias
