--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,9 @@ yoshimi 1.5.6 M
 2017-12-21 Will
 * Implemented import of complete banks.
 * Updated docs.
+* BugFix: duplicate entry test in wrong place :(
+  Wiping out paired .xiz and .xiy in exiting banks.
+* More doc updates.
 
 2017-12-16 Will
 * Included current manual.
