--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2017-12-28 Will
+* Reinstated safe version of localpath().
+* Applied PATH_MAX patch from debian maintainer.
+
 2017-12-27 Will
 * Refactored bank removal code.
 * Improved bank import reporting.
