--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.5.6 M
 * Revised old config warning.
   Now centred on master window an only
   recognises config files.
+* Moved other use of message window to master ui.
 
 2017-12-28 Will
 * Reinstated safe version of localpath().
