--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.5.6 M
   Now centred on master window an only
   recognises config files.
 * Moved other use of message window to master ui.
+* BugFix: MIDI-learn init was killing message window.
 
 2017-12-28 Will
 * Reinstated safe version of localpath().
