--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2017-12-31 Will
+* Removed some redundant threadmessage code.
+* Listed proposed new root & bank commands.
+
 2017-12-30 Will
 * Moved all key shifts out of RBP thread.
 * Moved master fine detune out of RBP thread.
