--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.6 M
 
+2018-1-7 Will
+* Removed redundant direct setting GUI LFO frequency.
+
 2018-1-4 Will
 * Corrected message for unknown MIDI event.
   Also now as hex and obeys 'Log incomming events'
