--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -3,9 +3,7 @@ Requested: auto 'apply' timer for padsynth.
 
 Do a dual scan for banks so that IDd ones are found first, then any new ones picked up on the second scan. This stops known ones being re-ordered.
 
-Sometimes can't edit upper voice rows from panel
-
-pasting effect doesn't update effect title.
+Pasting effect doesn't update effect title.
 
 Requested: revise window states so engines etc can be made auto open.
 
