--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -36,6 +36,7 @@ Make things like Echo delay either floats or much higher resolution.
 Consider enabling and disabling tooltips.
 
 Make attempt to start second independent instance open a new one in running yoshimi instead - saves memory and more consistent.
+Also, add command to start new instance from within running Yoshimi
 
 Possible single state file (for standalone) including all currently open instances,
 
