--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.6 M
 
+2018-1-20 Will
+* Minor bank optimisations.
+
 2018-1-19 Will
 * Cosmetic changes to panel window.
   Improves clarity and consistency.
