--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-1-21 Will
+* BugFix: CLI abort if query on top list.
+* Refinements to thread safe async read.
+
 2018-1-20 Will
 * Minor bank optimisations.
 * Started new thread safe async read.
