--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -3,6 +3,8 @@ Requested: auto 'apply' timer for padsynth.
 
 Do a dual scan for banks so that IDd ones are found first, then any new ones picked up on the second scan. This stops known ones being re-ordered.
 
+Bug! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well or better still loop back to try alsa.
+
 Pasting effect doesn't update effect title.
 
 Requested: revise window states so engines etc can be made auto open.
