--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.6 M
 
+2018-1-26 Will
+* Removed no longer needed VU ring buffer.
+
 2018-1-25 Will
 * Corrected VU meter update for multi-instance.
 * Enabled reading from CLI (direct).
@@ -7,7 +10,7 @@ yoshimi 1.5.6 M
 
 2018-1-24 Will
 * Improved VU behaviour - better attack/decay.
-  Adjustments not longer made in GUI and will be
+  Adjustments no longer made in GUI and will be
   easier to be made available to the CLI.
 
 2018-1-23 Will
