--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.6 M
 
+2018-1-27 Will
+* Rationalised PadSynth calls.
+
 2018-1-26 Will
 * Removed no longer needed VU ring buffer.
 * GUI VU meter display now fully detached :)
