--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,4 +1,8 @@
 
+PRIORITY
+Properly sort out limits - especially effects.
+
+
 Requested: auto 'apply' timer for padsynth.
 
 Do a dual scan for banks so that IDd ones are found first, then any new ones picked up on the second scan. This stops known ones being re-ordered.
