--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.6 M
 
+2016-2-3 Will
+[LIMITS] First refactoring of this.
+         Quite a few ommisions.
+         Seems to be correct for MIDI-learn
+         but may still be some errors.
+
 2016-2-1 Will
 * PadSynth 'busy' also reported to the GUI.
 * Removed redundant 'apply' code from Part.
