--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.5.6 M
          Quite a few ommisions.
          Seems to be correct for MIDI-learn
          but may still be some errors.
+[LIMITS] Made some corrections and optimisations.
 
 2016-2-1 Will
 * PadSynth 'busy' also reported to the GUI.
