--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.5.6 M
          Seems to be correct for MIDI-learn
          but may still be some errors.
 [LIMITS] Made some corrections and optimisations.
+[LIMITS] Last? optimisations.
 
 2016-2-1 Will
 * PadSynth 'busy' also reported to the GUI.
