Started major upgrade to effects limits

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-2-8 Will
+* Started major upgrade to effects limits.
+  Reverb completed others begun.
+
 2018-2-7 Will
 * Some small improvements to 'reads'.
 * Corrected wrong dates in Changelog!
