--- a/Changelog
+++ b/Changelog
@@ -5,7 +5,8 @@ yoshimi 1.5.6 M
   Reverb completed others begun.
 * Code cleanups surrounding effects limits.
 * Echo completed.
-* BugFix: Segfault on creating new bank (empty string)
+* BugFix: Segfault on creating new bank (empty string).
+* Some small GUI improvements.
 
 2018-2-7 Will
 * Some small improvements to 'reads'.
