--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-2-11 Will
+* Improved bank import error reporting.
+* Implemented bank export.
+
 2018-2-8 Will
 * Started major upgrade to effects limits.
   Reverb completed others begun.
