Added 'Modular Sines' to Companion bank Further adjustments to EQ effect controls

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-2-16 Will
+* Added 'Modular Sines' to Companion bank.
+* Further adjustments to EQ effect controls.
+
 2018-2-15 Will
 * Minor tweaks to banks.
 
