--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-2-18 Will
+* BugFix: Dynfilter presets not updating GUI :(
+* Small adjustment to 'Modular Sines'.
+
 2018-2-16 Will
 * Added 'Modular Sines' to Companion bank.
 * Further adjustments to EQ effect controls.
