--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.5.6 M
 * BugFix: Dynfilter presets not updating GUI :(
 * Small adjustment to 'Modular Sines'.
 * Further refinements to Dynfilter limits.
+* Changed all occurrences of p_buffer to sent_buffer.
+  More descriptive and easier to follow in the code.
 
 2018-2-16 Will
 * Added 'Modular Sines' to Companion bank.
