--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.6 M
 
+2018-2-23 Will
+* Reverted LV2 buffer size change pending investigation.
+  was commit: cf7c6e746239e90069a599a966aecbd5ba4f9f6e
+* Distortion and Alienwah limits now track preset number.
+
 2018-2-21 Will
 * Implemented note on/off test routines.
 
