--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,15 +1,5 @@
 Edit button
-+A open adsynth engine
-+1 to 8 open voice window
-+S open subsynth engine
-+P open padsynth engine
-
-Left button only open if enabled
-Right Button enable and open
-
-+K open kit window
-+E open effects window
-
++1 to 8 open addsynth voice window
 
 Unchecking volume in controllers works correctly but still changes the GUI controls :(
 
